main.tf
iterraform {
  required_version = ">=1.0.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">=3.0"
    }
  }
}

provider "aws" {
  region = var.aws_region
  endpoints {
  sts = "https://sts.ap-south-1.amazonaws.com"
            }
  assume_role {
  role_arn = "arn:aws:iam::992915816135:instance-profile/my-ec2-terraform-role"
  session_name = "terraform_session_name"
              }
       }

resource "aws_security_group" "my_security_group" {
  name        = var.security_group
  description = "security group for Ec2 instance"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from jenkis server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = var.security_group
  }
}

# Create AWS ec2 instance
resource "aws_instance" "myFirstInstance" {
  ami           = var.ami_id
  key_name = var.key_name
  instance_type = var.instance_type
  security_groups= [var.security_group]
  tags= {
    Name = var.tag_name
  }
}

# Create Elastic IP address
resource "aws_eip" "myFirstInstance" {
  vpc      = true
  instance = aws_instance.myFirstInstance.id
  tags= {
    Name = "my_elastic_ip"
  }
}
